[gd_scene load_steps=13 format=2]

[ext_resource path="res://plants/ground_it.png" type="Texture" id=1]
[ext_resource path="res://tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://attack.tscn" type="PackedScene" id=6]
[ext_resource path="res://dino.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Font/Roboto-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://plants/Sky.png" type="Texture" id=10]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="QuadMesh" id=4]

[node name="Main" type="Node"]
script = ExtResource( 5 )
attack_scene = ExtResource( 6 )
dino_scene = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -42.0
margin_top = -15.0
margin_right = 1047.0
margin_bottom = 602.0
texture = ExtResource( 10 )
expand = true

[node name="ground" type="RigidBody2D" parent="."]
position = Vector2( -70, 580 )
mode = 1
mass = 0.01
gravity_scale = 0.0

[node name="MeshInstance2D2" type="MeshInstance2D" parent="ground"]
position = Vector2( 582, -42.0035 )
scale = Vector2( -1023, -132.409 )
mesh = SubResource( 2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground"]
position = Vector2( 0, 4.03045 )
scale = Vector2( 1, 1.02734 )
polygon = PoolVector2Array( 70, -107, 72, 19, 72, 19, 1096, 19, 1095, -109, 70, -107 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="ground"]

[node name="tree" parent="." instance=ExtResource( 3 )]
position = Vector2( 473, 470 )
scale = Vector2( 0.2, 0.2 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 163, 443 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 334, 443 )

[node name="DinoSpawnPosition" type="Position2D" parent="."]
position = Vector2( 1028, 443 )

[node name="DinoSpawnPosition2" type="Position2D" parent="."]
position = Vector2( 1, 434 )

[node name="DinoWaitTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="StartRetry" type="Button" parent="."]
anchor_left = 0.292
anchor_top = 0.4
anchor_right = 0.67
anchor_bottom = 0.517
margin_left = -0.00802612
margin_right = 11.992
margin_bottom = 20.0

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.381
anchor_top = 0.318
anchor_right = 0.588
anchor_bottom = 0.382
margin_left = -0.144012
margin_top = 0.199982
margin_right = 204.856
margin_bottom = 38.2
custom_fonts/font = SubResource( 3 )
text = "your score: 50"

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource( 4 )
texture = ExtResource( 10 )

[node name="BACK" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "<"

[connection signal="go" from="tree" to="." method="_on_tree_go"]
[connection signal="phit" from="player" to="." method="_on_player_phit"]
[connection signal="timeout" from="DinoWaitTimer" to="." method="_on_DinoWaitTimer_timeout"]
[connection signal="pressed" from="StartRetry" to="." method="_on_StartRetry_pressed"]
[connection signal="pressed" from="BACK" to="." method="_on_BACK_pressed"]
